// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Badge Default 1`] = `
.c0 {
  display: inline-block;
  box-sizing: border-box;
  min-width: 18px;
  min-height: 18px;
  padding: 3px 6px;
  border-radius: 9px;
  background: #ed2157;
  font-family: Source Sans Pro,sans-serif;
  font-size: 12px;
  line-height: 1;
  color: #fff;
  white-space: nowrap;
}

<div
  className="c0"
>
  1
</div>
`;

exports[`Storyshots Box Default 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: start;
  align-content: flex-start;
  margin: 0px 0px 0px 0px;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-order: 0;
  -ms-flex-order: 0;
  order: 0;
  -webkit-align-self: auto;
  -ms-flex-item-align: auto;
  align-self: auto;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: auto;
  -webkit-flex-wrap: no-wrap;
  -ms-flex-wrap: no-wrap;
  flex-wrap: no-wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  margin: 0px 0px 0px 0px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
  -webkit-align-self: auto;
  -ms-flex-item-align: auto;
  align-self: auto;
}

.c4 {
  padding: 48px 48px 48px 48px;
}

.c5 {
  color: #333740;
  font-family: Source Sans Pro,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
}

.c0 {
  border: 1px dashed #aaa;
  height: 90vh;
}

.c3 {
  background: #eee;
  border: 1px dashed #aaa;
  width: 100%;
  height: 100%;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          <p
            className="c5"
          >
            Box 
            1
          </p>
        </div>
      </div>
    </div>
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          <p
            className="c5"
          >
            Box 
            2
          </p>
        </div>
      </div>
    </div>
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          <p
            className="c5"
          >
            Box 
            3
          </p>
        </div>
      </div>
    </div>
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          <p
            className="c5"
          >
            Box 
            4
          </p>
        </div>
      </div>
    </div>
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          <p
            className="c5"
          >
            Box 
            5
          </p>
        </div>
      </div>
    </div>
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          <p
            className="c5"
          >
            Box 
            6
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots BreakpointProvider Default 1`] = `
.c1 {
  color: #333740;
  font-family: Source Sans Pro,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
}

.c0 {
  background: #eee;
  padding: 24px;
}

<div>
  <div
    className="c0"
  >
    <p
      className="c1"
    >
      Current breakpoint is 
      large
    </p>
  </div>
</div>
`;

exports[`Storyshots Button On a contrast area 1`] = `
.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: auto;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  margin: -6px -6px -6px -6px;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-order: 0;
  -ms-flex-order: 0;
  order: 0;
  -webkit-align-self: auto;
  -ms-flex-item-align: auto;
  align-self: auto;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: auto;
  -webkit-flex-wrap: no-wrap;
  -ms-flex-wrap: no-wrap;
  flex-wrap: no-wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  margin: 6px 6px 6px 6px;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-order: 0;
  -ms-flex-order: 0;
  order: 0;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
}

.c1 {
  padding: 12px 12px 12px 12px;
}

.c4 {
  position: relative;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  line-height: 1;
  padding: 11px 24px;
  cursor: pointer;
  display: inline-block;
  outline: none;
  -webkit-transform: translateZ(0) translate3d(0,0,0);
  -ms-transform: translateZ(0) translate3d(0,0,0);
  transform: translateZ(0) translate3d(0,0,0);
  -webkit-transition: -webkit-transform 0.1s,background 0.3s,color 0.3s,box-shadow 0.1s, border 0.3s;
  -webkit-transition: transform 0.1s,background 0.3s,color 0.3s,box-shadow 0.1s, border 0.3s;
  transition: transform 0.1s,background 0.3s,color 0.3s,box-shadow 0.1s, border 0.3s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: Source Sans Pro,sans-serif;
  font-size: 14px;
  border-radius: 3px;
  border-width: 0;
  font-weight: 400;
  border-style: solid;
  background-color: #edeff2;
  border-color: transparent;
  color: #55656d;
  box-shadow: 0 -2px 0 rgba(0,0,0,0.2) inset;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4:hover {
  background-color: #e4e7ec;
  border-color: transparent;
  color: #55656d;
  box-shadow: 0 -2px 0 rgba(0,0,0,0.2) inset;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4:focus {
  background-color: #edeff2;
  border-color: transparent;
  color: #55656d;
  box-shadow: 0 -2px 0 rgba(0,0,0,.2) inset,0 0 0 4px #e4e7ec;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4:active {
  background-color: #e4e7ec;
  border-color: transparent;
  color: #55656d;
  box-shadow: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4:active {
  -webkit-transform: translateY(2px);
  -ms-transform: translateY(2px);
  transform: translateY(2px);
}

.c4::before {
  position: absolute;
  display: block;
  left: 0;
  top: 0;
  right: 0;
  bottom: 0;
  z-index: -2;
  content: '';
  opacity: 0;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  background: #e4e7ec repeating-linear-gradient( -45deg, rgba(0,0,0,0.04), rgba(0,0,0,0.04) 10px, transparent 10px, transparent 20px );
  box-shadow: 0 -2px 0 rgba(0,0,0,0.2) inset;
  border-radius: 3px;
}

.c4:disabled {
  background: #e4e7ec;
  border-color: transparent;
  cursor: default;
  opacity: 0.7;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
  color: #88979d;
  box-shadow: none;
}

.c4:disabled::before {
  opacity: 1;
}

.c5 {
  position: relative;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  line-height: 1;
  padding: 11px 12px;
  cursor: pointer;
  display: inline-block;
  outline: none;
  -webkit-transform: translateZ(0) translate3d(0,0,0);
  -ms-transform: translateZ(0) translate3d(0,0,0);
  transform: translateZ(0) translate3d(0,0,0);
  -webkit-transition: -webkit-transform 0.1s,background 0.3s,color 0.3s,box-shadow 0.1s, border 0.3s;
  -webkit-transition: transform 0.1s,background 0.3s,color 0.3s,box-shadow 0.1s, border 0.3s;
  transition: transform 0.1s,background 0.3s,color 0.3s,box-shadow 0.1s, border 0.3s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: Source Sans Pro,sans-serif;
  font-size: 14px;
  border-radius: 3px;
  border-width: 0;
  font-weight: 400;
  border-style: solid;
  background-color: transparent;
  border-color: transparent;
  color: #333740;
  box-shadow: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c5:hover {
  background-color: #edeff2;
  border-color: transparent;
  color: #333740;
  box-shadow: 0 -2px 0 rgba(0,0,0,0.2) inset;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c5:focus {
  background-color: #edeff2;
  border-color: transparent;
  color: #333740;
  box-shadow: 0 -2px 0 rgba(0,0,0,.2) inset,0 0 0 4px #e4e7ec;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c5:active {
  background-color: #edeff2;
  border-color: transparent;
  color: #333740;
  box-shadow: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c5:active {
  -webkit-transform: translateY(2px);
  -ms-transform: translateY(2px);
  transform: translateY(2px);
}

.c5::before {
  position: absolute;
  display: block;
  left: 0;
  top: 0;
  right: 0;
  bottom: 0;
  z-index: -2;
  content: '';
  opacity: 0;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  background: #e4e7ec repeating-linear-gradient( -45deg, rgba(0,0,0,0.04), rgba(0,0,0,0.04) 10px, transparent 10px, transparent 20px );
  box-shadow: none;
  border-radius: 3px;
}

.c5:disabled {
  background: #e4e7ec;
  border-color: transparent;
  cursor: default;
  opacity: 0.7;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
  color: #88979d;
  box-shadow: none;
}

.c5:disabled::before {
  opacity: 1;
}

.c0 {
  background: #f8f9fb;
}

.c6 {
  display: inline-block;
  vertical-align: middle;
  height: 18px;
  width: 18px;
}

.c6 svg {
  max-height: 100%;
  max-width: 100%;
  fill: currentColor;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div>
      <div
        className="c2"
      >
        <div
          className="c3"
        >
          <button
            className="c4"
            disabled={false}
            onClick={[Function]}
            title="Click me"
            type="button"
          >
            Click me
          </button>
        </div>
        <div
          className="c3"
        >
          <button
            className="c5"
            disabled={undefined}
            onClick={[Function]}
            title="Click me"
            type="button"
          >
            <span
              aria-hidden={true}
              className="c6"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "test-file-stub",
                }
              }
              role="img"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Button With an icon 1`] = `
.c0 {
  position: relative;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  line-height: 1;
  padding: 11px 12px;
  cursor: pointer;
  display: inline-block;
  outline: none;
  -webkit-transform: translateZ(0) translate3d(0,0,0);
  -ms-transform: translateZ(0) translate3d(0,0,0);
  transform: translateZ(0) translate3d(0,0,0);
  -webkit-transition: -webkit-transform 0.1s,background 0.3s,color 0.3s,box-shadow 0.1s, border 0.3s;
  -webkit-transition: transform 0.1s,background 0.3s,color 0.3s,box-shadow 0.1s, border 0.3s;
  transition: transform 0.1s,background 0.3s,color 0.3s,box-shadow 0.1s, border 0.3s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: Source Sans Pro,sans-serif;
  font-size: 14px;
  border-radius: 3px;
  border-width: 0;
  font-weight: 400;
  border-style: solid;
  background-color: #f8f9fb;
  border-color: transparent;
  color: #55656d;
  box-shadow: 0 -2px 0 rgba(0,0,0,0.2) inset;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover {
  background-color: #edeff2;
  border-color: transparent;
  color: #55656d;
  box-shadow: 0 -2px 0 rgba(0,0,0,0.2) inset;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:focus {
  background-color: #f8f9fb;
  border-color: transparent;
  color: #55656d;
  box-shadow: 0 -2px 0 rgba(0,0,0,.2) inset,0 0 0 4px rgba(51,55,64,.08);
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:active {
  background-color: #edeff2;
  border-color: transparent;
  color: #55656d;
  box-shadow: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:active {
  -webkit-transform: translateY(2px);
  -ms-transform: translateY(2px);
  transform: translateY(2px);
}

.c0::before {
  position: absolute;
  display: block;
  left: 0;
  top: 0;
  right: 0;
  bottom: 0;
  z-index: -2;
  content: '';
  opacity: 0;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  background: #e4e7ec repeating-linear-gradient( -45deg, rgba(0,0,0,0.04), rgba(0,0,0,0.04) 10px, transparent 10px, transparent 20px );
  box-shadow: 0 -2px 0 rgba(0,0,0,0.2) inset;
  border-radius: 3px;
}

.c0:disabled {
  background: #e4e7ec;
  border-color: transparent;
  cursor: default;
  opacity: 0.7;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
  color: #88979d;
  box-shadow: none;
}

.c0:disabled::before {
  opacity: 1;
}

.c1 {
  display: inline-block;
  vertical-align: middle;
  height: 18px;
  width: 18px;
}

.c1 svg {
  max-height: 100%;
  max-width: 100%;
  fill: currentColor;
}

<button
  className="c0"
  disabled={false}
  onClick={[Function]}
  title="Click me"
  type="button"
>
  <span
    aria-hidden={true}
    className="c1"
    dangerouslySetInnerHTML={
      Object {
        "__html": "test-file-stub",
      }
    }
    role="img"
  />
</button>
`;

exports[`Storyshots Button With text 1`] = `
.c0 {
  position: relative;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  line-height: 1;
  padding: 11px 24px;
  cursor: pointer;
  display: inline-block;
  outline: none;
  -webkit-transform: translateZ(0) translate3d(0,0,0);
  -ms-transform: translateZ(0) translate3d(0,0,0);
  transform: translateZ(0) translate3d(0,0,0);
  -webkit-transition: -webkit-transform 0.1s,background 0.3s,color 0.3s,box-shadow 0.1s, border 0.3s;
  -webkit-transition: transform 0.1s,background 0.3s,color 0.3s,box-shadow 0.1s, border 0.3s;
  transition: transform 0.1s,background 0.3s,color 0.3s,box-shadow 0.1s, border 0.3s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: Source Sans Pro,sans-serif;
  font-size: 14px;
  border-radius: 3px;
  border-width: 0;
  font-weight: 400;
  border-style: solid;
  background-color: #5bd16a;
  border-color: transparent;
  color: #fff;
  box-shadow: 0 -2px 0 rgba(0,0,0,0.2) inset;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover {
  background-color: #4cc55b;
  border-color: transparent;
  color: #fff;
  box-shadow: 0 -2px 0 rgba(0,0,0,0.2) inset;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:focus {
  background-color: #5bd16a;
  border-color: transparent;
  color: #fff;
  box-shadow: 0 -2px 0 rgba(0,0,0,.2) inset,0 0 0 4px rgba(107,222,120,.4);
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:active {
  background-color: #4cc55b;
  border-color: transparent;
  color: #fff;
  box-shadow: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:active {
  -webkit-transform: translateY(2px);
  -ms-transform: translateY(2px);
  transform: translateY(2px);
}

.c0::before {
  position: absolute;
  display: block;
  left: 0;
  top: 0;
  right: 0;
  bottom: 0;
  z-index: -2;
  content: '';
  opacity: 0;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  background: #e4e7ec repeating-linear-gradient( -45deg, rgba(0,0,0,0.04), rgba(0,0,0,0.04) 10px, transparent 10px, transparent 20px );
  box-shadow: 0 -2px 0 rgba(0,0,0,0.2) inset;
  border-radius: 3px;
}

.c0:disabled {
  background: #e4e7ec;
  border-color: transparent;
  cursor: default;
  opacity: 0.7;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
  color: #88979d;
  box-shadow: none;
}

.c0:disabled::before {
  opacity: 1;
}

<button
  className="c0"
  disabled={false}
  onClick={[Function]}
  title="Click me"
  type="button"
>
  Click me
</button>
`;

exports[`Storyshots ButtonGroup Default 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: auto;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  margin: -6px -6px -6px -6px;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-order: 0;
  -ms-flex-order: 0;
  order: 0;
  -webkit-align-self: auto;
  -ms-flex-item-align: auto;
  align-self: auto;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: auto;
  -webkit-flex-wrap: no-wrap;
  -ms-flex-wrap: no-wrap;
  flex-wrap: no-wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  margin: 6px 6px 6px 6px;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-order: 0;
  -ms-flex-order: 0;
  order: 0;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
}

.c3 {
  position: relative;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  line-height: 1;
  padding: 11px 24px;
  cursor: pointer;
  display: inline-block;
  outline: none;
  -webkit-transform: translateZ(0) translate3d(0,0,0);
  -ms-transform: translateZ(0) translate3d(0,0,0);
  transform: translateZ(0) translate3d(0,0,0);
  -webkit-transition: -webkit-transform 0.1s,background 0.3s,color 0.3s,box-shadow 0.1s, border 0.3s;
  -webkit-transition: transform 0.1s,background 0.3s,color 0.3s,box-shadow 0.1s, border 0.3s;
  transition: transform 0.1s,background 0.3s,color 0.3s,box-shadow 0.1s, border 0.3s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: Source Sans Pro,sans-serif;
  font-size: 14px;
  border-radius: 3px;
  border-width: 0;
  font-weight: 400;
  border-style: solid;
  background-color: #5bd16a;
  border-color: transparent;
  color: #fff;
  box-shadow: 0 -2px 0 rgba(0,0,0,0.2) inset;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3:hover {
  background-color: #4cc55b;
  border-color: transparent;
  color: #fff;
  box-shadow: 0 -2px 0 rgba(0,0,0,0.2) inset;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3:focus {
  background-color: #5bd16a;
  border-color: transparent;
  color: #fff;
  box-shadow: 0 -2px 0 rgba(0,0,0,.2) inset,0 0 0 4px rgba(107,222,120,.4);
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3:active {
  background-color: #4cc55b;
  border-color: transparent;
  color: #fff;
  box-shadow: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3:active {
  -webkit-transform: translateY(2px);
  -ms-transform: translateY(2px);
  transform: translateY(2px);
}

.c3::before {
  position: absolute;
  display: block;
  left: 0;
  top: 0;
  right: 0;
  bottom: 0;
  z-index: -2;
  content: '';
  opacity: 0;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  background: #e4e7ec repeating-linear-gradient( -45deg, rgba(0,0,0,0.04), rgba(0,0,0,0.04) 10px, transparent 10px, transparent 20px );
  box-shadow: 0 -2px 0 rgba(0,0,0,0.2) inset;
  border-radius: 3px;
}

.c3:disabled {
  background: #e4e7ec;
  border-color: transparent;
  cursor: default;
  opacity: 0.7;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
  color: #88979d;
  box-shadow: none;
}

.c3:disabled::before {
  opacity: 1;
}

.c4 {
  position: relative;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  line-height: 1;
  padding: 11px 24px;
  cursor: pointer;
  display: inline-block;
  outline: none;
  -webkit-transform: translateZ(0) translate3d(0,0,0);
  -ms-transform: translateZ(0) translate3d(0,0,0);
  transform: translateZ(0) translate3d(0,0,0);
  -webkit-transition: -webkit-transform 0.1s,background 0.3s,color 0.3s,box-shadow 0.1s, border 0.3s;
  -webkit-transition: transform 0.1s,background 0.3s,color 0.3s,box-shadow 0.1s, border 0.3s;
  transition: transform 0.1s,background 0.3s,color 0.3s,box-shadow 0.1s, border 0.3s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: Source Sans Pro,sans-serif;
  font-size: 14px;
  border-radius: 3px;
  border-width: 0;
  font-weight: 400;
  border-style: solid;
  background-color: #f8f9fb;
  border-color: transparent;
  color: #55656d;
  box-shadow: 0 -2px 0 rgba(0,0,0,0.2) inset;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4:hover {
  background-color: #edeff2;
  border-color: transparent;
  color: #55656d;
  box-shadow: 0 -2px 0 rgba(0,0,0,0.2) inset;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4:focus {
  background-color: #f8f9fb;
  border-color: transparent;
  color: #55656d;
  box-shadow: 0 -2px 0 rgba(0,0,0,.2) inset,0 0 0 4px rgba(51,55,64,.08);
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4:active {
  background-color: #edeff2;
  border-color: transparent;
  color: #55656d;
  box-shadow: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4:active {
  -webkit-transform: translateY(2px);
  -ms-transform: translateY(2px);
  transform: translateY(2px);
}

.c4::before {
  position: absolute;
  display: block;
  left: 0;
  top: 0;
  right: 0;
  bottom: 0;
  z-index: -2;
  content: '';
  opacity: 0;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  background: #e4e7ec repeating-linear-gradient( -45deg, rgba(0,0,0,0.04), rgba(0,0,0,0.04) 10px, transparent 10px, transparent 20px );
  box-shadow: 0 -2px 0 rgba(0,0,0,0.2) inset;
  border-radius: 3px;
}

.c4:disabled {
  background: #e4e7ec;
  border-color: transparent;
  cursor: default;
  opacity: 0.7;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
  color: #88979d;
  box-shadow: none;
}

.c4:disabled::before {
  opacity: 1;
}

.c0 {
  max-width: 640px;
  border: solid 3px rgba(255,36,94,0.3);
}

<div
  className="c0"
>
  <div>
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <button
          className="c3"
          disabled={undefined}
          onClick={[Function]}
          title="Primary button"
          type="button"
        >
          Primary button
        </button>
      </div>
      <div
        className="c2"
      >
        <button
          className="c4"
          disabled={undefined}
          onClick={[Function]}
          title="Secondary button"
          type="button"
        >
          Secondary button
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Contrast Default 1`] = `
Array [
  .c1 {
  padding: 12px 12px 12px 12px;
}

.c2 {
  position: relative;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  line-height: 1;
  padding: 11px 24px;
  cursor: pointer;
  display: inline-block;
  outline: none;
  -webkit-transform: translateZ(0) translate3d(0,0,0);
  -ms-transform: translateZ(0) translate3d(0,0,0);
  transform: translateZ(0) translate3d(0,0,0);
  -webkit-transition: -webkit-transform 0.1s,background 0.3s,color 0.3s,box-shadow 0.1s, border 0.3s;
  -webkit-transition: transform 0.1s,background 0.3s,color 0.3s,box-shadow 0.1s, border 0.3s;
  transition: transform 0.1s,background 0.3s,color 0.3s,box-shadow 0.1s, border 0.3s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: Source Sans Pro,sans-serif;
  font-size: 14px;
  border-radius: 3px;
  border-width: 0;
  font-weight: 400;
  border-style: solid;
  background-color: #edeff2;
  border-color: transparent;
  color: #55656d;
  box-shadow: 0 -2px 0 rgba(0,0,0,0.2) inset;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2:hover {
  background-color: #e4e7ec;
  border-color: transparent;
  color: #55656d;
  box-shadow: 0 -2px 0 rgba(0,0,0,0.2) inset;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2:focus {
  background-color: #edeff2;
  border-color: transparent;
  color: #55656d;
  box-shadow: 0 -2px 0 rgba(0,0,0,.2) inset,0 0 0 4px #e4e7ec;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2:active {
  background-color: #e4e7ec;
  border-color: transparent;
  color: #55656d;
  box-shadow: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2:active {
  -webkit-transform: translateY(2px);
  -ms-transform: translateY(2px);
  transform: translateY(2px);
}

.c2::before {
  position: absolute;
  display: block;
  left: 0;
  top: 0;
  right: 0;
  bottom: 0;
  z-index: -2;
  content: '';
  opacity: 0;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  background: #e4e7ec repeating-linear-gradient( -45deg, rgba(0,0,0,0.04), rgba(0,0,0,0.04) 10px, transparent 10px, transparent 20px );
  box-shadow: 0 -2px 0 rgba(0,0,0,0.2) inset;
  border-radius: 3px;
}

.c2:disabled {
  background: #e4e7ec;
  border-color: transparent;
  cursor: default;
  opacity: 0.7;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
  color: #88979d;
  box-shadow: none;
}

.c2:disabled::before {
  opacity: 1;
}

.c0 {
  background: #f8f9fb;
}

<div
    className="c0"
  >
    <div
      className="c1"
    >
      <button
        className="c2"
        disabled={undefined}
        onClick={[Function]}
        title="Inside Contrast"
        type="button"
      >
        Inside Contrast
      </button>
    </div>
  </div>,
  .c0 {
  padding: 12px 12px 12px 12px;
}

.c1 {
  position: relative;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  line-height: 1;
  padding: 11px 24px;
  cursor: pointer;
  display: inline-block;
  outline: none;
  -webkit-transform: translateZ(0) translate3d(0,0,0);
  -ms-transform: translateZ(0) translate3d(0,0,0);
  transform: translateZ(0) translate3d(0,0,0);
  -webkit-transition: -webkit-transform 0.1s,background 0.3s,color 0.3s,box-shadow 0.1s, border 0.3s;
  -webkit-transition: transform 0.1s,background 0.3s,color 0.3s,box-shadow 0.1s, border 0.3s;
  transition: transform 0.1s,background 0.3s,color 0.3s,box-shadow 0.1s, border 0.3s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: Source Sans Pro,sans-serif;
  font-size: 14px;
  border-radius: 3px;
  border-width: 0;
  font-weight: 400;
  border-style: solid;
  background-color: #f8f9fb;
  border-color: transparent;
  color: #55656d;
  box-shadow: 0 -2px 0 rgba(0,0,0,0.2) inset;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:hover {
  background-color: #edeff2;
  border-color: transparent;
  color: #55656d;
  box-shadow: 0 -2px 0 rgba(0,0,0,0.2) inset;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:focus {
  background-color: #f8f9fb;
  border-color: transparent;
  color: #55656d;
  box-shadow: 0 -2px 0 rgba(0,0,0,.2) inset,0 0 0 4px rgba(51,55,64,.08);
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:active {
  background-color: #edeff2;
  border-color: transparent;
  color: #55656d;
  box-shadow: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:active {
  -webkit-transform: translateY(2px);
  -ms-transform: translateY(2px);
  transform: translateY(2px);
}

.c1::before {
  position: absolute;
  display: block;
  left: 0;
  top: 0;
  right: 0;
  bottom: 0;
  z-index: -2;
  content: '';
  opacity: 0;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  background: #e4e7ec repeating-linear-gradient( -45deg, rgba(0,0,0,0.04), rgba(0,0,0,0.04) 10px, transparent 10px, transparent 20px );
  box-shadow: 0 -2px 0 rgba(0,0,0,0.2) inset;
  border-radius: 3px;
}

.c1:disabled {
  background: #e4e7ec;
  border-color: transparent;
  cursor: default;
  opacity: 0.7;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
  color: #88979d;
  box-shadow: none;
}

.c1:disabled::before {
  opacity: 1;
}

<div
    className="c0"
  >
    <button
      className="c1"
      disabled={undefined}
      onClick={[Function]}
      title="Outside of Contrast"
      type="button"
    >
      Outside of Contrast
    </button>
  </div>,
]
`;

exports[`Storyshots ErrorBoundary Default 1`] = `
.c0 {
  color: #333740;
  font-family: Source Sans Pro,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
}

<div>
  <p
    className="c0"
  >
    This does not have an error.
  </p>
</div>
`;

exports[`Storyshots FoldOut With a toggle 1`] = `
.c1 {
  padding: 0px 0px 12px 0px;
}

.c2 {
  color: #333740;
  font-family: Source Sans Pro,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
}

.c3 {
  position: relative;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  line-height: 1;
  padding: 11px 24px;
  cursor: pointer;
  display: inline-block;
  outline: none;
  -webkit-transform: translateZ(0) translate3d(0,0,0);
  -ms-transform: translateZ(0) translate3d(0,0,0);
  transform: translateZ(0) translate3d(0,0,0);
  -webkit-transition: -webkit-transform 0.1s,background 0.3s,color 0.3s,box-shadow 0.1s, border 0.3s;
  -webkit-transition: transform 0.1s,background 0.3s,color 0.3s,box-shadow 0.1s, border 0.3s;
  transition: transform 0.1s,background 0.3s,color 0.3s,box-shadow 0.1s, border 0.3s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: Source Sans Pro,sans-serif;
  font-size: 14px;
  border-radius: 3px;
  border-width: 0;
  font-weight: 400;
  border-style: solid;
  background-color: #f8f9fb;
  border-color: transparent;
  color: #55656d;
  box-shadow: 0 -2px 0 rgba(0,0,0,0.2) inset;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3:hover {
  background-color: #edeff2;
  border-color: transparent;
  color: #55656d;
  box-shadow: 0 -2px 0 rgba(0,0,0,0.2) inset;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3:focus {
  background-color: #f8f9fb;
  border-color: transparent;
  color: #55656d;
  box-shadow: 0 -2px 0 rgba(0,0,0,.2) inset,0 0 0 4px rgba(51,55,64,.08);
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3:active {
  background-color: #edeff2;
  border-color: transparent;
  color: #55656d;
  box-shadow: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3:active {
  -webkit-transform: translateY(2px);
  -ms-transform: translateY(2px);
  transform: translateY(2px);
}

.c3::before {
  position: absolute;
  display: block;
  left: 0;
  top: 0;
  right: 0;
  bottom: 0;
  z-index: -2;
  content: '';
  opacity: 0;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  background: #e4e7ec repeating-linear-gradient( -45deg, rgba(0,0,0,0.04), rgba(0,0,0,0.04) 10px, transparent 10px, transparent 20px );
  box-shadow: 0 -2px 0 rgba(0,0,0,0.2) inset;
  border-radius: 3px;
}

.c3:disabled {
  background: #e4e7ec;
  border-color: transparent;
  cursor: default;
  opacity: 0.7;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
  color: #88979d;
  box-shadow: none;
}

.c3:disabled::before {
  opacity: 1;
}

.c0 {
  -webkit-transition: height 300ms cubic-bezier(0.5,0,0.1,1);
  transition: height 300ms cubic-bezier(0.5,0,0.1,1);
  overflow: hidden;
  height: 0;
}

<div>
  <div
    className="c0"
  >
    <div>
      <div
        className="c1"
      >
        <p
          className="c2"
        >
          
    Now this is the story all about how
    My life got flipped, turned upside down
    And I'd like to take a minute just sit right there
    I'll tell you how I became the prince of a town called Bel-air

    In west Philadelphia born and raised
    On the playground where I spent most of my days
    Chilling out, maxing, relaxing all cool
    And all shooting some b-ball outside of the school
    When a couple of guys, they were up to no good
    Started making trouble in my neighbourhood
    I got in one little fight and my mom got scared
    And said "You're moving with your auntie and uncle in Bel-air"

    I whistled for a cab and when it came near the
    License plate said "fresh" and had a dice in the mirror
    If anything I could say that this cab was rare
    But I thought nah, forget it, yo homes to Bel-air!

    I pulled up to a house about seven or eight
    And I yelled to the cabby "Yo, homes smell you later!"
    Looked at my kingdom I was finally there
    To sit on my throne as the prince of Bel-air

        </p>
      </div>
    </div>
  </div>
  <button
    className="c3"
    disabled={undefined}
    onClick={[Function]}
    title="open FoldOut"
    type="button"
  >
    Toggle
  </button>
</div>
`;

exports[`Storyshots Heading Default 1`] = `
.c0 {
  color: #333740;
  font-family: Melbourne,sans-serif;
  font-size: 28px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
}

<div
  className="c0"
  role="heading"
>
  This is a div element.
</div>
`;

exports[`Storyshots Heading With a hierarchy 1`] = `
.c0 {
  color: #333740;
  font-family: Melbourne,sans-serif;
  font-size: 28px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
}

<h1
  className="c0"
  role="heading"
>
  This is an h
  1
   element.
</h1>
`;

exports[`Storyshots Icon Large icon 1`] = `
.c0 {
  display: inline-block;
  vertical-align: middle;
  height: 60px;
  width: 60px;
}

.c0 svg {
  max-height: 100%;
  max-width: 100%;
  fill: currentColor;
}

<span
  aria-hidden={true}
  className="c0"
  dangerouslySetInnerHTML={
    Object {
      "__html": "test-file-stub",
    }
  }
  role="img"
/>
`;

exports[`Storyshots Icon Small icon 1`] = `
.c0 {
  display: inline-block;
  vertical-align: middle;
  height: 18px;
  width: 18px;
}

.c0 svg {
  max-height: 100%;
  max-width: 100%;
  fill: currentColor;
}

<span
  aria-hidden={true}
  className="c0"
  dangerouslySetInnerHTML={
    Object {
      "__html": "test-file-stub",
    }
  }
  role="img"
/>
`;

exports[`Storyshots Icon With overwritten fill 1`] = `
.c0 {
  display: inline-block;
  vertical-align: middle;
  height: 60px;
  width: 60px;
}

.c0 svg {
  max-height: 100%;
  max-width: 100%;
  fill: BlueViolet;
}

<span
  aria-hidden={true}
  className="c0"
  dangerouslySetInnerHTML={
    Object {
      "__html": "test-file-stub",
    }
  }
  role="img"
/>
`;

exports[`Storyshots Icon With some text 1`] = `
.c1 {
  margin: 12px 0px 0px 0px;
}

.c0 {
  display: inline-block;
  vertical-align: middle;
  height: 18px;
  width: 18px;
}

.c0 svg {
  max-height: 100%;
  max-width: 100%;
  fill: currentColor;
}

.c2 {
  display: inline-block;
  vertical-align: middle;
  height: 60px;
  width: 60px;
}

.c2 svg {
  max-height: 100%;
  max-width: 100%;
  fill: currentColor;
}

<div>
  <span
    aria-hidden={true}
    className="c0"
    dangerouslySetInnerHTML={
      Object {
        "__html": "test-file-stub",
      }
    }
    role="img"
  />
  <span>
     With some text
  </span>
  <div
    className="c1"
  >
    <span
      aria-hidden={true}
      className="c2"
      dangerouslySetInnerHTML={
        Object {
          "__html": "test-file-stub",
        }
      }
      role="img"
    />
    <span>
       With some other text
    </span>
  </div>
</div>
`;

exports[`Storyshots InlineNotification Default 1`] = `
.c0 {
  -webkit-transition: color 0.3s;
  transition: color 0.3s;
  font-family: Source Sans Pro,sans-serif;
  font-size: 12px;
  color: #c81746;
  display: inline-block;
}

.c1 {
  vertical-align: middle;
}

<span
  className="c0"
>
    
  <span
    className="c1"
  >
    Something is wrong!
  </span>
</span>
`;

exports[`Storyshots InlineNotification With Icon 1`] = `
.c1 {
  display: inline-block;
  vertical-align: middle;
  height: 18px;
  width: 18px;
}

.c1 svg {
  max-height: 100%;
  max-width: 100%;
  fill: currentColor;
}

.c0 {
  -webkit-transition: color 0.3s;
  transition: color 0.3s;
  font-family: Source Sans Pro,sans-serif;
  font-size: 12px;
  color: #c81746;
  display: inline-block;
}

.c2 {
  vertical-align: middle;
}

<span
  className="c0"
>
  <span
    aria-hidden={true}
    className="c1"
    dangerouslySetInnerHTML={
      Object {
        "__html": "test-file-stub",
      }
    }
    role="img"
  />
    
  <span
    className="c2"
  >
    Something is wrong!
  </span>
</span>
`;

exports[`Storyshots Link Action with child element 1`] = `
.c0 {
  color: #333740;
  font-family: Source Sans Pro,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
}

.c1 {
  color: #333740;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  cursor: pointer;
  -webkit-transition: color 100ms;
  transition: color 100ms;
  display: inline;
  border: none;
  font-size: 14px;
  background-color: transparent;
  padding: 0;
}

.c1:hover {
  color: #5bd16a;
  background-color: transparent;
}

<p
  className="c0"
>
  <button
    className="c1"
    onClick={[Function]}
    title="Google search"
    type="button"
  >
    <span>
      Click me!
    </span>
  </button>
</p>
`;

exports[`Storyshots Link Default 1`] = `
.c0 {
  color: #333740;
  font-family: Source Sans Pro,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
}

.c1 {
  color: #333740;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-transition: color 100ms;
  transition: color 100ms;
  background-color: transparent;
}

.c1:hover {
  color: #5bd16a;
  background-color: transparent;
}

<p
  className="c0"
>
  <a
    className="c1"
    href="http://www.google.com"
    target="_self"
    title="Google search"
  >
    Google search
  </a>
</p>
`;

exports[`Storyshots MessageStream Default 1`] = `
.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: auto;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: start;
  align-content: flex-start;
  margin: 0;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-order: 0;
  -ms-flex-order: 0;
  order: 0;
  -webkit-align-self: auto;
  -ms-flex-item-align: auto;
  align-self: auto;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: auto;
  -webkit-flex-wrap: no-wrap;
  -ms-flex-wrap: no-wrap;
  flex-wrap: no-wrap;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  margin: 0px 24px 0px 0px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 250px;
  -ms-flex-preferred-size: 250px;
  flex-basis: 250px;
  -webkit-order: 0;
  -ms-flex-order: 0;
  order: 0;
  -webkit-align-self: auto;
  -ms-flex-item-align: auto;
  align-self: auto;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: auto;
  -webkit-flex-wrap: no-wrap;
  -ms-flex-wrap: no-wrap;
  flex-wrap: no-wrap;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  margin: 6px 0px 6px 0px;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-order: 0;
  -ms-flex-order: 0;
  order: 0;
  -webkit-align-self: auto;
  -ms-flex-item-align: auto;
  align-self: auto;
}

.c2 {
  padding: 12px 24px 12px 24px;
}

.c6 {
  color: #333740;
  font-family: Source Sans Pro,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
}

.c5 {
  color: #333740;
  font-family: Source Sans Pro,sans-serif;
  font-size: 14px;
  font-weight: 700;
  line-height: 1.5;
  margin: 0;
}

.c7 {
  color: #a6aab3;
  font-family: Source Sans Pro,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
}

.c11 {
  position: relative;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  line-height: 1;
  padding: 11px 24px;
  cursor: pointer;
  display: inline-block;
  outline: none;
  -webkit-transform: translateZ(0) translate3d(0,0,0);
  -ms-transform: translateZ(0) translate3d(0,0,0);
  transform: translateZ(0) translate3d(0,0,0);
  -webkit-transition: -webkit-transform 0.1s,background 0.3s,color 0.3s,box-shadow 0.1s, border 0.3s;
  -webkit-transition: transform 0.1s,background 0.3s,color 0.3s,box-shadow 0.1s, border 0.3s;
  transition: transform 0.1s,background 0.3s,color 0.3s,box-shadow 0.1s, border 0.3s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: Source Sans Pro,sans-serif;
  font-size: 14px;
  border-radius: 3px;
  border-width: 0;
  font-weight: 400;
  border-style: solid;
  background-color: #5bd16a;
  border-color: transparent;
  color: #fff;
  box-shadow: 0 -2px 0 rgba(0,0,0,0.2) inset;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c11:hover {
  background-color: #4cc55b;
  border-color: transparent;
  color: #fff;
  box-shadow: 0 -2px 0 rgba(0,0,0,0.2) inset;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c11:focus {
  background-color: #5bd16a;
  border-color: transparent;
  color: #fff;
  box-shadow: 0 -2px 0 rgba(0,0,0,.2) inset,0 0 0 4px rgba(107,222,120,.4);
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c11:active {
  background-color: #4cc55b;
  border-color: transparent;
  color: #fff;
  box-shadow: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c11:active {
  -webkit-transform: translateY(2px);
  -ms-transform: translateY(2px);
  transform: translateY(2px);
}

.c11::before {
  position: absolute;
  display: block;
  left: 0;
  top: 0;
  right: 0;
  bottom: 0;
  z-index: -2;
  content: '';
  opacity: 0;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  background: #e4e7ec repeating-linear-gradient( -45deg, rgba(0,0,0,0.04), rgba(0,0,0,0.04) 10px, transparent 10px, transparent 20px );
  box-shadow: 0 -2px 0 rgba(0,0,0,0.2) inset;
  border-radius: 3px;
}

.c11:disabled {
  background: #e4e7ec;
  border-color: transparent;
  cursor: default;
  opacity: 0.7;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
  color: #88979d;
  box-shadow: none;
}

.c11:disabled::before {
  opacity: 1;
}

.c17 {
  position: relative;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  line-height: 1;
  padding: 11px 24px;
  cursor: pointer;
  display: inline-block;
  outline: none;
  -webkit-transform: translateZ(0) translate3d(0,0,0);
  -ms-transform: translateZ(0) translate3d(0,0,0);
  transform: translateZ(0) translate3d(0,0,0);
  -webkit-transition: -webkit-transform 0.1s,background 0.3s,color 0.3s,box-shadow 0.1s, border 0.3s;
  -webkit-transition: transform 0.1s,background 0.3s,color 0.3s,box-shadow 0.1s, border 0.3s;
  transition: transform 0.1s,background 0.3s,color 0.3s,box-shadow 0.1s, border 0.3s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: Source Sans Pro,sans-serif;
  font-size: 14px;
  border-radius: 3px;
  border-width: 0;
  font-weight: 400;
  border-style: solid;
  background-color: #edeff2;
  border-color: transparent;
  color: #55656d;
  box-shadow: 0 -2px 0 rgba(0,0,0,0.2) inset;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c17:hover {
  background-color: #e4e7ec;
  border-color: transparent;
  color: #55656d;
  box-shadow: 0 -2px 0 rgba(0,0,0,0.2) inset;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c17:focus {
  background-color: #edeff2;
  border-color: transparent;
  color: #55656d;
  box-shadow: 0 -2px 0 rgba(0,0,0,.2) inset,0 0 0 4px #e4e7ec;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c17:active {
  background-color: #e4e7ec;
  border-color: transparent;
  color: #55656d;
  box-shadow: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c17:active {
  -webkit-transform: translateY(2px);
  -ms-transform: translateY(2px);
  transform: translateY(2px);
}

.c17::before {
  position: absolute;
  display: block;
  left: 0;
  top: 0;
  right: 0;
  bottom: 0;
  z-index: -2;
  content: '';
  opacity: 0;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  background: #e4e7ec repeating-linear-gradient( -45deg, rgba(0,0,0,0.04), rgba(0,0,0,0.04) 10px, transparent 10px, transparent 20px );
  box-shadow: 0 -2px 0 rgba(0,0,0,0.2) inset;
  border-radius: 3px;
}

.c17:disabled {
  background: #e4e7ec;
  border-color: transparent;
  cursor: default;
  opacity: 0.7;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
  color: #88979d;
  box-shadow: none;
}

.c17:disabled::before {
  opacity: 1;
}

.c13 {
  position: relative;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  line-height: 1;
  padding: 11px 24px;
  cursor: pointer;
  display: inline-block;
  outline: none;
  -webkit-transform: translateZ(0) translate3d(0,0,0);
  -ms-transform: translateZ(0) translate3d(0,0,0);
  transform: translateZ(0) translate3d(0,0,0);
  -webkit-transition: -webkit-transform 0.1s,background 0.3s,color 0.3s,box-shadow 0.1s, border 0.3s;
  -webkit-transition: transform 0.1s,background 0.3s,color 0.3s,box-shadow 0.1s, border 0.3s;
  transition: transform 0.1s,background 0.3s,color 0.3s,box-shadow 0.1s, border 0.3s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: Source Sans Pro,sans-serif;
  font-size: 14px;
  border-radius: 3px;
  border-width: 0;
  font-weight: 400;
  border-style: solid;
  background-color: #fcc200;
  border-color: transparent;
  color: #fff;
  box-shadow: 0 -2px 0 rgba(0,0,0,0.2) inset;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c13:hover {
  background-color: #edb107;
  border-color: transparent;
  color: #fff;
  box-shadow: 0 -2px 0 rgba(0,0,0,0.2) inset;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c13:focus {
  background-color: #fcc200;
  border-color: transparent;
  color: #fff;
  box-shadow: 0 -2px 0 rgba(0,0,0,.1) inset,0 0 0 3px rgba(252,194,0,.25);
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c13:active {
  background-color: #edb107;
  border-color: transparent;
  color: #fff;
  box-shadow: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c13:active {
  -webkit-transform: translateY(2px);
  -ms-transform: translateY(2px);
  transform: translateY(2px);
}

.c13::before {
  position: absolute;
  display: block;
  left: 0;
  top: 0;
  right: 0;
  bottom: 0;
  z-index: -2;
  content: '';
  opacity: 0;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  background: #e4e7ec repeating-linear-gradient( -45deg, rgba(0,0,0,0.04), rgba(0,0,0,0.04) 10px, transparent 10px, transparent 20px );
  box-shadow: 0 -2px 0 rgba(0,0,0,0.2) inset;
  border-radius: 3px;
}

.c13:disabled {
  background: #e4e7ec;
  border-color: transparent;
  cursor: default;
  opacity: 0.7;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
  color: #88979d;
  box-shadow: none;
}

.c13:disabled::before {
  opacity: 1;
}

.c16 {
  position: relative;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  line-height: 1;
  padding: 11px 24px;
  cursor: pointer;
  display: inline-block;
  outline: none;
  -webkit-transform: translateZ(0) translate3d(0,0,0);
  -ms-transform: translateZ(0) translate3d(0,0,0);
  transform: translateZ(0) translate3d(0,0,0);
  -webkit-transition: -webkit-transform 0.1s,background 0.3s,color 0.3s,box-shadow 0.1s, border 0.3s;
  -webkit-transition: transform 0.1s,background 0.3s,color 0.3s,box-shadow 0.1s, border 0.3s;
  transition: transform 0.1s,background 0.3s,color 0.3s,box-shadow 0.1s, border 0.3s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: Source Sans Pro,sans-serif;
  font-size: 14px;
  border-radius: 3px;
  border-width: 0;
  font-weight: 400;
  border-style: solid;
  background-color: #ed2157;
  border-color: transparent;
  color: #fff;
  box-shadow: 0 -2px 0 rgba(0,0,0,0.2) inset;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c16:hover {
  background-color: #dc1b4f;
  border-color: transparent;
  color: #fff;
  box-shadow: 0 -2px 0 rgba(0,0,0,0.2) inset;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c16:focus {
  background-color: #ed2157;
  border-color: transparent;
  color: #fff;
  box-shadow: 0 -2px 0 rgba(0,0,0,.1) inset,0 0 0 3px rgba(237,33,87,.25);
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c16:active {
  background-color: #dc1b4f;
  border-color: transparent;
  color: #fff;
  box-shadow: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c16:active {
  -webkit-transform: translateY(2px);
  -ms-transform: translateY(2px);
  transform: translateY(2px);
}

.c16::before {
  position: absolute;
  display: block;
  left: 0;
  top: 0;
  right: 0;
  bottom: 0;
  z-index: -2;
  content: '';
  opacity: 0;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  background: #e4e7ec repeating-linear-gradient( -45deg, rgba(0,0,0,0.04), rgba(0,0,0,0.04) 10px, transparent 10px, transparent 20px );
  box-shadow: 0 -2px 0 rgba(0,0,0,0.2) inset;
  border-radius: 3px;
}

.c16:disabled {
  background: #e4e7ec;
  border-color: transparent;
  cursor: default;
  opacity: 0.7;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
  color: #88979d;
  box-shadow: none;
}

.c16:disabled::before {
  opacity: 1;
}

.c15 {
  background: #f8f9fb;
}

.c0 {
  display: block;
}

.c8 {
  border-bottom: 1px solid #dbdfe6;
}

.c1 {
  position: relative;
}

.c1::before {
  content: '';
  position: absolute;
  left: 0;
  top: 0;
  height: 100%;
  width: 5px;
  background: #5bd16a;
}

.c9 {
  position: relative;
}

.c9::before {
  content: '';
  position: absolute;
  left: 0;
  top: 0;
  height: 100%;
  width: 5px;
  background: #dbdfe6;
}

.c12 {
  position: relative;
}

.c12::before {
  content: '';
  position: absolute;
  left: 0;
  top: 0;
  height: 100%;
  width: 5px;
  background: #fcc200;
}

.c14 {
  position: relative;
}

.c14::before {
  content: '';
  position: absolute;
  left: 0;
  top: 0;
  height: 100%;
  width: 5px;
  background: #ed2157;
}

<div
  className="c0"
>
  <div
    className="c1"
    title="Sit Inceptos Magna"
  >
    <div>
      <div
        className="c2"
      >
        <div
          className="c3"
        >
          <div
            className="c4"
          >
            <p
              className="c5"
            >
              Sit Inceptos Magna
            </p>
            <p
              className="c6"
            >
              Donec id elit non mi porta gravida at eget metus. Nullam quis risus eget urna mollis ornare vel eu leo.
            </p>
            <p
              className="c7"
            >
              Today 12:00
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c8"
  />
  <div
    className="c9"
    title="Aenean Dapibus Vulputate Tortor Magna"
  >
    <div>
      <div
        className="c2"
      >
        <div
          className="c3"
        >
          <div
            className="c4"
          >
            <p
              className="c5"
            >
              Aenean Dapibus Vulputate Tortor Magna
            </p>
            <p
              className="c6"
            >
              Nulla vitae elit libero, a pharetra augue. Integer posuere erat a ante venenatis dapibus posuere velit
                 aliquet. Nullam quis risus eget urna mollis ornare vel eu leo. Sed posuere consectetur est at lobortis.
            </p>
            <p
              className="c7"
            >
              Today 10:00
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c8"
  />
  <div
    className="c1"
    title="Vestibulum Dapibus"
  >
    <div>
      <div
        className="c2"
      >
        <div
          className="c3"
        >
          <div
            className="c4"
          >
            <p
              className="c5"
            >
              Vestibulum Dapibus
            </p>
            <p
              className="c6"
            >
              Curabitur blandit tempus porttitor.
            </p>
            <p
              className="c7"
            >
              Yesterday 12:00
            </p>
          </div>
          <div
            className="c10"
          >
            <button
              className="c11"
              disabled={undefined}
              onClick={[Function]}
              title="Click me"
              type="button"
            >
              Click me
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c8"
  />
  <div
    className="c12"
    title="Parturient Euismod Mollis Fringilla"
  >
    <div>
      <div
        className="c2"
      >
        <div
          className="c3"
        >
          <div
            className="c4"
          >
            <p
              className="c5"
            >
              Parturient Euismod Mollis Fringilla
            </p>
            <p
              className="c6"
            >
              Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit
                 amet risus. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Donec sed odio dui.
            </p>
            <p
              className="c7"
            >
              12-12-2012 12:00
            </p>
          </div>
          <div
            className="c10"
          >
            <button
              className="c13"
              disabled={undefined}
              onClick={[Function]}
              title="Click me"
              type="button"
            >
              Click me
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c8"
  />
  <div
    className="c14"
    title="Tortor Cursus"
  >
    <div
      className="c15"
    >
      <div
        className="c2"
      >
        <div
          className="c3"
        >
          <div
            className="c4"
          >
            <p
              className="c5"
            >
              Tortor Cursus
            </p>
            <p
              className="c6"
            >
              Maecenas faucibus mollis interdum. Aenean lacinia bibendum nulla sed consectetur.
            </p>
            <p
              className="c7"
            >
              12-12-2012 12:00
            </p>
          </div>
          <div
            className="c10"
          >
            <button
              className="c16"
              disabled={undefined}
              onClick={[Function]}
              title="Click me"
              type="button"
            >
              Click me
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c8"
  />
  <div
    className="c9"
    title="Euismod Dolor Consectetur"
  >
    <div
      className="c15"
    >
      <div
        className="c2"
      >
        <div
          className="c3"
        >
          <div
            className="c4"
          >
            <p
              className="c5"
            >
              Euismod Dolor Consectetur
            </p>
            <p
              className="c6"
            >
              Etiam porta sem malesuada magna mollis euismod. Donec id elit non mi porta gravida at eget metus.
            </p>
            <p
              className="c7"
            />
          </div>
          <div
            className="c10"
          >
            <button
              className="c17"
              disabled={undefined}
              onClick={[Function]}
              title="Click me"
              type="button"
            >
              Click me
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Notification Error 1`] = `
.c1 {
  margin: 12px 12px 12px 12px;
}

.c2 {
  display: inline-block;
  vertical-align: middle;
  height: 18px;
  width: 18px;
}

.c2 svg {
  max-height: 100%;
  max-width: 100%;
  fill: currentColor;
}

.c0 {
  border-width: 1px;
  border-style: solid;
  font-family: Source Sans Pro,sans-serif;
  font-size: 14px;
  background-color: #ffbdce;
  border-color: #ff6c93;
  color: #c81746;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <span
      aria-hidden={true}
      className="c2"
      dangerouslySetInnerHTML={
        Object {
          "__html": "test-file-stub",
        }
      }
      role="img"
    />
       
    Oops, something wen't wrong. Please try again.
  </div>
</div>
`;

exports[`Storyshots Notification Info 1`] = `
.c1 {
  margin: 12px 12px 12px 12px;
}

.c2 {
  display: inline-block;
  vertical-align: middle;
  height: 18px;
  width: 18px;
}

.c2 svg {
  max-height: 100%;
  max-width: 100%;
  fill: currentColor;
}

.c0 {
  border-width: 1px;
  border-style: solid;
  font-family: Source Sans Pro,sans-serif;
  font-size: 14px;
  background-color: #dde7f2;
  border-color: #c8d2dd;
  color: #6bde78;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <span
      aria-hidden={true}
      className="c2"
      dangerouslySetInnerHTML={
        Object {
          "__html": "test-file-stub",
        }
      }
      role="img"
    />
       
    Oops, something wen't wrong. Please try again.
  </div>
</div>
`;

exports[`Storyshots Notification Success 1`] = `
.c1 {
  margin: 12px 12px 12px 12px;
}

.c2 {
  display: inline-block;
  vertical-align: middle;
  height: 18px;
  width: 18px;
}

.c2 svg {
  max-height: 100%;
  max-width: 100%;
  fill: currentColor;
}

.c0 {
  border-width: 1px;
  border-style: solid;
  font-family: Source Sans Pro,sans-serif;
  font-size: 14px;
  background-color: #d2f5d6;
  border-color: #6bde78;
  color: #31953d;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <span
      aria-hidden={true}
      className="c2"
      dangerouslySetInnerHTML={
        Object {
          "__html": "test-file-stub",
        }
      }
      role="img"
    />
       
    Wow, Great job!
  </div>
</div>
`;

exports[`Storyshots Notification Warning 1`] = `
.c1 {
  margin: 12px 12px 12px 12px;
}

.c2 {
  display: inline-block;
  vertical-align: middle;
  height: 18px;
  width: 18px;
}

.c2 svg {
  max-height: 100%;
  max-width: 100%;
  fill: currentColor;
}

.c0 {
  border-width: 1px;
  border-style: solid;
  font-family: Source Sans Pro,sans-serif;
  font-size: 14px;
  background-color: #fff0be;
  border-color: #ffce28;
  color: #bb8d0a;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <span
      aria-hidden={true}
      className="c2"
      dangerouslySetInnerHTML={
        Object {
          "__html": "test-file-stub",
        }
      }
      role="img"
    />
       
    Careful, this might go wrong.
  </div>
</div>
`;

exports[`Storyshots Notification With a custom icon 1`] = `
.c1 {
  margin: 12px 12px 12px 12px;
}

.c2 {
  display: inline-block;
  vertical-align: middle;
  height: 18px;
  width: 18px;
}

.c2 svg {
  max-height: 100%;
  max-width: 100%;
  fill: currentColor;
}

.c0 {
  border-width: 1px;
  border-style: solid;
  font-family: Source Sans Pro,sans-serif;
  font-size: 14px;
  background-color: #fff0be;
  border-color: #ffce28;
  color: #bb8d0a;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <span
      aria-hidden={true}
      className="c2"
      dangerouslySetInnerHTML={
        Object {
          "__html": "test-file-stub",
        }
      }
      role="img"
    />
       
    Meh, I am not impressed.
  </div>
</div>
`;

exports[`Storyshots Popover Default 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 90vh;
  -webkit-flex-wrap: no-wrap;
  -ms-flex-wrap: no-wrap;
  flex-wrap: no-wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  margin: 0;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-order: 0;
  -ms-flex-order: 0;
  order: 0;
  -webkit-align-self: auto;
  -ms-flex-item-align: auto;
  align-self: auto;
}

.c1 {
  margin: 48px 48px 48px 48px;
}

.c3 {
  position: relative;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  line-height: 1;
  padding: 11px 24px;
  cursor: pointer;
  display: inline-block;
  outline: none;
  -webkit-transform: translateZ(0) translate3d(0,0,0);
  -ms-transform: translateZ(0) translate3d(0,0,0);
  transform: translateZ(0) translate3d(0,0,0);
  -webkit-transition: -webkit-transform 0.1s,background 0.3s,color 0.3s,box-shadow 0.1s, border 0.3s;
  -webkit-transition: transform 0.1s,background 0.3s,color 0.3s,box-shadow 0.1s, border 0.3s;
  transition: transform 0.1s,background 0.3s,color 0.3s,box-shadow 0.1s, border 0.3s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: Source Sans Pro,sans-serif;
  font-size: 14px;
  border-radius: 3px;
  border-width: 0;
  font-weight: 400;
  border-style: solid;
  background-color: #5bd16a;
  border-color: transparent;
  color: #fff;
  box-shadow: 0 -2px 0 rgba(0,0,0,0.2) inset;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3:hover {
  background-color: #4cc55b;
  border-color: transparent;
  color: #fff;
  box-shadow: 0 -2px 0 rgba(0,0,0,0.2) inset;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3:focus {
  background-color: #5bd16a;
  border-color: transparent;
  color: #fff;
  box-shadow: 0 -2px 0 rgba(0,0,0,.2) inset,0 0 0 4px rgba(107,222,120,.4);
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3:active {
  background-color: #4cc55b;
  border-color: transparent;
  color: #fff;
  box-shadow: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3:active {
  -webkit-transform: translateY(2px);
  -ms-transform: translateY(2px);
  transform: translateY(2px);
}

.c3::before {
  position: absolute;
  display: block;
  left: 0;
  top: 0;
  right: 0;
  bottom: 0;
  z-index: -2;
  content: '';
  opacity: 0;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  background: #e4e7ec repeating-linear-gradient( -45deg, rgba(0,0,0,0.04), rgba(0,0,0,0.04) 10px, transparent 10px, transparent 20px );
  box-shadow: 0 -2px 0 rgba(0,0,0,0.2) inset;
  border-radius: 3px;
}

.c3:disabled {
  background: #e4e7ec;
  border-color: transparent;
  cursor: default;
  opacity: 0.7;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
  color: #88979d;
  box-shadow: none;
}

.c3:disabled::before {
  opacity: 1;
}

.c2 {
  display: inline-block;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <button
        className="c3"
        disabled={undefined}
        onClick={[Function]}
        title="Toggle"
        type="button"
      >
        Toggle
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots PriceTag Default 1`] = `
.c0 {
  position: relative;
  color: #333740;
  font-family: Source Sans Pro,sans-serif;
  font-size: 28px;
  font-weight: 400;
}

.c0 sup {
  font-size: .7em;
}

<span
  className="c0"
>
  €
   
  12
  ,
  00
</span>
`;

exports[`Storyshots RadioButton Default 1`] = `
.c1 {
  margin: 0px 9px 0px 0px;
}

.c4 {
  color: #333740;
  font-family: Source Sans Pro,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c3 {
  position: relative;
  display: none;
}

.c2 {
  width: 17px;
  height: 17px;
  border-radius: 100%;
  -webkit-transition: box-shadow 300ms ease,border 300ms ease;
  transition: box-shadow 300ms ease,border 300ms ease;
  background-color: #f8f9fb;
  border: 1px solid #4cc55b;
  box-shadow: inset 0px 0px 0px 5.5px #6bde78;
}

.c2:hover {
  box-shadow: inset 0 0 0 0 transparent,0 0 0 4px rgba(107,222,120,0.4);
  box-shadow: inset 0px 0px 0px 5.5px #6bde78,0 0 0 4px rgba(107,222,120,0.4);
}

<div
  className="c0"
  onClick={[Function]}
>
  <div
    className="c1"
  >
    <div
      checked={true}
      className="c2"
    >
      <input
        checked={true}
        className="c3"
        name="demo"
        onChange={[Function]}
        type="radio"
        value="demo2"
      />
    </div>
  </div>
  <p
    className="c4"
  >
    <label
      htmlFor="demo"
    >
      foo
    </label>
  </p>
</div>
`;

exports[`Storyshots RadioButtonGroup Default 1`] = `
.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: auto;
  -webkit-flex-wrap: no-wrap;
  -ms-flex-wrap: no-wrap;
  flex-wrap: no-wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  margin: 6px 6px 6px 6px;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-order: 0;
  -ms-flex-order: 0;
  order: 0;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: auto;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  margin: -6px -6px -6px -6px;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-order: 0;
  -ms-flex-order: 0;
  order: 0;
  -webkit-align-self: auto;
  -ms-flex-item-align: auto;
  align-self: auto;
}

.c4 {
  margin: 0px 9px 0px 0px;
}

.c7 {
  color: #333740;
  font-family: Source Sans Pro,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c6 {
  position: relative;
  display: none;
}

.c5 {
  width: 17px;
  height: 17px;
  border-radius: 100%;
  -webkit-transition: box-shadow 300ms ease,border 300ms ease;
  transition: box-shadow 300ms ease,border 300ms ease;
  background-color: #f8f9fb;
  border: 1px solid #4cc55b;
  box-shadow: inset 0px 0px 0px 5.5px #6bde78;
}

.c5:hover {
  box-shadow: inset 0 0 0 0 transparent,0 0 0 4px rgba(107,222,120,0.4);
  box-shadow: inset 0px 0px 0px 5.5px #6bde78,0 0 0 4px rgba(107,222,120,0.4);
}

.c8 {
  width: 17px;
  height: 17px;
  border-radius: 100%;
  -webkit-transition: box-shadow 300ms ease,border 300ms ease;
  transition: box-shadow 300ms ease,border 300ms ease;
  background-color: #f8f9fb;
  border: 1px solid #d2d7e0;
  box-shadow: #6bde78;
}

.c8:hover {
  box-shadow: inset 0 0 0 0 transparent,0 0 0 4px rgba(107,222,120,0.4);
  box-shadow: #6bde78,0 0 0 4px rgba(107,222,120,0.4);
}

.c0 {
  max-width: 640px;
  border: solid 3px rgba(255,36,94,0.3);
}

<div
  className="c0"
>
  <div>
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <div
          className="c3"
          onClick={[Function]}
        >
          <div
            className="c4"
          >
            <div
              checked={true}
              className="c5"
            >
              <input
                checked={true}
                className="c6"
                name="demo"
                onChange={[Function]}
                type="radio"
                value="1"
              />
            </div>
          </div>
          <p
            className="c7"
          >
            <label
              htmlFor="demo"
            >
              bar 1
            </label>
          </p>
        </div>
      </div>
      <div
        className="c2"
      >
        <div
          className="c3"
          onClick={[Function]}
        >
          <div
            className="c4"
          >
            <div
              checked={false}
              className="c8"
            >
              <input
                checked={false}
                className="c6"
                name="demo"
                onChange={[Function]}
                type="radio"
                value="2"
              />
            </div>
          </div>
          <p
            className="c7"
          >
            <label
              htmlFor="demo"
            >
              bar 2
            </label>
          </p>
        </div>
      </div>
      <div
        className="c2"
      >
        <div
          className="c3"
          onClick={[Function]}
        >
          <div
            className="c4"
          >
            <div
              checked={false}
              className="c8"
            >
              <input
                checked={false}
                className="c6"
                name="demo"
                onChange={[Function]}
                type="radio"
                value="3"
              />
            </div>
          </div>
          <p
            className="c7"
          >
            <label
              htmlFor="demo"
            >
              bar 3
            </label>
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Spacer With margin 1`] = `
.c0 {
  margin: 12px 12px 12px 12px;
}

.c2 {
  color: #333740;
  font-family: Source Sans Pro,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
}

.c1 {
  border: solid 3px rgba(255,36,94,0.3);
  border-radius: 5px;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <p
      className="c2"
    >
      This has a margin.
    </p>
  </div>
</div>
`;

exports[`Storyshots Spacer With padding 1`] = `
.c1 {
  padding: 12px 12px 12px 12px;
}

.c2 {
  color: #333740;
  font-family: Source Sans Pro,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
}

.c0 {
  border: solid 3px rgba(255,36,94,0.3);
  border-radius: 5px;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <p
      className="c2"
    >
      This has padding.
    </p>
  </div>
</div>
`;

exports[`Storyshots SubHeading Default 1`] = `
.c0 {
  color: #88979d;
  font-family: Source Sans Pro,sans-serif;
  font-size: 22px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
}

<div
  className="c0"
  role="heading"
>
  This is a div element.
</div>
`;

exports[`Storyshots SubHeading With a hierarchy 1`] = `
.c0 {
  color: #88979d;
  font-family: Source Sans Pro,sans-serif;
  font-size: 22px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
}

<h2
  className="c0"
  role="heading"
>
  This is an h
  2
   element.
</h2>
`;

exports[`Storyshots Text Default 1`] = `
.c0 {
  color: #333740;
  font-family: Source Sans Pro,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
}

<p
  className="c0"
>
  
    Now this is the story all about how
    My life got flipped, turned upside down
    And I'd like to take a minute just sit right there
    I'll tell you how I became the prince of a town called Bel-air

    In west Philadelphia born and raised
    On the playground where I spent most of my days
    Chilling out, maxing, relaxing all cool
    And all shooting some b-ball outside of the school
    When a couple of guys, they were up to no good
    Started making trouble in my neighbourhood
    I got in one little fight and my mom got scared
    And said "You're moving with your auntie and uncle in Bel-air"

    I whistled for a cab and when it came near the
    License plate said "fresh" and had a dice in the mirror
    If anything I could say that this cab was rare
    But I thought nah, forget it, yo homes to Bel-air!

    I pulled up to a house about seven or eight
    And I yelled to the cabby "Yo, homes smell you later!"
    Looked at my kingdom I was finally there
    To sit on my throne as the prince of Bel-air

</p>
`;

exports[`Storyshots TextField Default 1`] = `
.c2 {
  position: relative;
  width: 100%;
  border: none;
  background: transparent;
  font-size: inherit;
  display: block;
  margin-top: 1em;
  padding: 0;
  line-height: 1.5;
  outline: none;
}

.c1 {
  -webkit-transition: top 0.2s,-webkit-transform 0.2s,font-size 0.2s,color 0.2s;
  -webkit-transition: top 0.2s,transform 0.2s,font-size 0.2s,color 0.2s;
  transition: top 0.2s,transform 0.2s,font-size 0.2s,color 0.2s;
  display: block;
  line-height: 1.5;
  position: absolute;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  top: 0;
  font-size: 1em;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #a6aab3;
  -webkit-transform: translate3d(0,0.85em,0) scale(1);
  -ms-transform: translate3d(0,0.85em,0) scale(1);
  transform: translate3d(0,0.85em,0) scale(1);
}

.c0 {
  -webkit-transition: border-color 0.3s;
  transition: border-color 0.3s;
  border: solid 1px #d2d7e0;
  font-size: 14px;
  font-family: Source Sans Pro,sans-serif;
  border-radius: 3px;
  display: inline-block;
  position: relative;
  padding: 0.3em 12px 0.4em 12px;
  cursor: text;
}

.c0 * {
  cursor: text;
}

<div
  className="c0"
  onBlurCapture={[Function]}
  onClick={[Function]}
  onFocusCapture={[Function]}
>
  <label
    className="c1"
  >
    First name
  </label>
  <input
    className="c2"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value=""
  />
</div>
`;

exports[`Storyshots TextField With Feedback 1`] = `
Array [
  .c2 {
  position: relative;
  width: 100%;
  border: none;
  background: transparent;
  font-size: inherit;
  display: block;
  margin-top: 1em;
  padding: 0;
  line-height: 1.5;
  outline: none;
}

.c1 {
  -webkit-transition: top 0.2s,-webkit-transform 0.2s,font-size 0.2s,color 0.2s;
  -webkit-transition: top 0.2s,transform 0.2s,font-size 0.2s,color 0.2s;
  transition: top 0.2s,transform 0.2s,font-size 0.2s,color 0.2s;
  display: block;
  line-height: 1.5;
  position: absolute;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  top: 0;
  font-size: 1em;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #a6aab3;
  -webkit-transform: translate3d(0,0.85em,0) scale(1);
  -ms-transform: translate3d(0,0.85em,0) scale(1);
  transform: translate3d(0,0.85em,0) scale(1);
}

.c0 {
  -webkit-transition: border-color 0.3s;
  transition: border-color 0.3s;
  border: solid 1px #d2d7e0;
  font-size: 14px;
  font-family: Source Sans Pro,sans-serif;
  border-radius: 3px;
  display: inline-block;
  position: relative;
  padding: 0.3em 12px 0.4em 12px;
  cursor: text;
  border-bottom-right-radius: 0;
  border-bottom-left-radius: 0;
  border-bottom: solid 2px #c81746;
}

.c0 * {
  cursor: text;
}

<div
    className="c0"
    onBlurCapture={[Function]}
    onClick={[Function]}
    onFocusCapture={[Function]}
  >
    <label
      className="c1"
    >
      First name
    </label>
    <input
      className="c2"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      type="text"
      value=""
    />
  </div>,
  .c0 {
  margin: 6px 0px 0px 12px;
}

.c2 {
  display: inline-block;
  vertical-align: middle;
  height: 18px;
  width: 18px;
}

.c2 svg {
  max-height: 100%;
  max-width: 100%;
  fill: currentColor;
}

.c1 {
  -webkit-transition: color 0.3s;
  transition: color 0.3s;
  font-family: Source Sans Pro,sans-serif;
  font-size: 12px;
  color: #c81746;
  display: inline-block;
}

.c3 {
  vertical-align: middle;
}

<div
    className="c0"
  >
    <span
      className="c1"
    >
      <span
        aria-hidden={true}
        className="c2"
        dangerouslySetInnerHTML={
          Object {
            "__html": "test-file-stub",
          }
        }
        role="img"
      />
        
      <span
        className="c3"
      >
        This is a feedback message
      </span>
    </span>
  </div>,
]
`;

exports[`Storyshots TransitionAnimation Default 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: auto;
  -webkit-flex-wrap: no-wrap;
  -ms-flex-wrap: no-wrap;
  flex-wrap: no-wrap;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  margin: 0;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-order: 0;
  -ms-flex-order: 0;
  order: 0;
  -webkit-align-self: auto;
  -ms-flex-item-align: auto;
  align-self: auto;
}

.c3 {
  color: #333740;
  font-family: Melbourne,sans-serif;
  font-size: 28px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
}

.c1 {
  -webkit-animation: zoomIn .3s both;
  animation: zoomIn .3s both;
}

.c2 {
  border: solid 3px rgba(255,36,94,0.3);
  padding: 6px 24px;
  border-radius: 5px;
  text-align: center;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
        role="heading"
      >
        Lorem ipsum
      </div>
    </div>
  </div>
</div>
`;
